fixed overflow bug

--- a/styles/general.css
+++ b/styles/general.css
@@ -1,9 +1,5 @@
-html,
 body {
-  overflow: hidden;
-}
-
-body {
+  overflow-x: hidden;
   margin: 0;
   padding-top: 80px;
   padding-left: 120px;
